--- a/projeto-sabespe/src/app/pages/perfil-polo-jardins/perfil-polo-jardins.component.html
+++ b/projeto-sabespe/src/app/pages/perfil-polo-jardins/perfil-polo-jardins.component.html
@@ -33,10 +33,10 @@
   <div class="text-geral absoluto text-wrapper-14">Economias de Esgoto</div>
   <div class="text-geral absoluto text-wrapper-15">Ligações de Água</div>
   <div class="text-geral absoluto text-wrapper-16">Total de Economias</div>
-  <img class="absoluto group-2" src="assets/vc-sabia.png" />
+  <img class="absoluto group-2" src="assets/vc-sabia.png" [routerLink]="['/voce-sabia-allianz']" />
   <div class="text-geral absoluto text-wrapper-17">Ligações de Esgoto</div>
-  <img class="botao absoluto vector" src="assets/gif/ICONES_seta-esq.gif" />
-  <img class="botao absoluto group-3" src="assets/gif/ICONES_X.gif" />
-  <img class="botao absoluto vector-2" src="assets/gif/ICONES_seta-dir.gif" />
-  <img class="botao absoluto group-4" src="assets/gif/ICONES_casa.gif" />
+  <img class="botao absoluto vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/mapa']" />
+  <img class="botao absoluto group-3" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
+  <img class="botao absoluto vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/perfil-polo-ipiranga']" />
+  <img class="botao absoluto group-4" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
 </div>
