--- a/projeto-sabespe/src/app/pages/voce-sabia-25-marco/voce-sabia-25-marco.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-25-marco/voce-sabia-25-marco.component.html
@@ -27,10 +27,9 @@
       <img class="mask-group" src="assets/ipiranga/25-marco/25-marco-1.png" /> <img class="img" src="assets/ipiranga/25-marco/25-marco-2.png" />
     </div>
   </div>
-  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
-  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/voce-sabia-paulista']" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
-  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
-  <div class="img-wrapper"></div>
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/voce-sabia-catedral']" />
 </div>
