--- a/projeto-sabespe/src/app/pages/voce-sabia-mooca/voce-sabia-mooca.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-mooca/voce-sabia-mooca.component.html
@@ -21,11 +21,10 @@
       <img class="mask-group" src="assets/mooca/mooca-1.png" /> <img class="img" src="assets/mooca/mooca-2.png" />
     </div>
   </div>
-  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
-  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/voce-sabia-museu']" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
-  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
-  <div class="img-wrapper"></div>
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/voce-sabia-grafite']" />
 </div>
 
