--- a/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.html
@@ -24,10 +24,8 @@
       <img class="mask-group" src="assets/tamanduatei/vila/vila-1.png" /> <img class="img" src="assets/tamanduatei/vila/vila-2.png" />
     </div>
   </div>
-  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
-  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/voce-sabia-industrial']" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
-  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
-  <div class="img-wrapper"></div>
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
 </div>
