--- a/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
+++ b/projeto-sabespe/src/app/pages/voce-sabia/voce-sabia.component.html
@@ -17,9 +17,8 @@
     </div>
   </div>
   <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
-  <img class="group-2" src="assets/gif/ICONES_X.gif" />
+  <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
-  <img class="group-3" src="assets/gif/ICONES_casa.gif" />
+  <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
   <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
-  <div class="img-wrapper"></div>
 </div>
