adicionando tela de indicadores

--- a/projeto-sabespe/src/app/pages/menu/menu.component.css
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.css
@@ -15,10 +15,9 @@
 
 .image {
   position: absolute;
-  width: 614px;
   height: 894px;
   top: 0;
-  left: 0;
+  left: -300px;
   mix-blend-mode: multiply;
   object-fit: cover;
 }
