--- a/projeto-sabespe/src/app/pages/menu/menu.component.html
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="div">
   <div class="overlap-group">
     <div class="overlap-group">
-      <img class="image" src="img/image-10.png" />
+      <img class="image" src="assets/gif/Element_05.gif" />
       <img class="vector" src="assets/linha-inferior.png" />
       <img class="img" src="assets/linha-inferior-meio.png" />
       <div class="frame"><div class="text-wrapper">Indicadores e processos</div></div>
