--- a/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
+++ b/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
@@ -8,9 +8,9 @@
     <img class="slice" src="img/slice-1.svg" />
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-    <img class="frame" src="assets/botao-sp.png" />
-    <img class="frame-2" src="assets/botao-sa.png" />
-    <img class="frame-3" src="assets/botao-m.png" />
+    <img class="frame" src="assets/botao-sp.png" [routerLink]="['/capa-sp']" />
+    <img class="frame-2" src="assets/botao-sa.png" [routerLink]="['/capa-sa']" />
+    <img class="frame-3" src="assets/botao-m.png" [routerLink]="['/capa-m']" />
 </div>
 
     
