finalizando rotas das metas

--- a/projeto-sabespe/src/app/pages/capa-sp/capa-sp.component.html
+++ b/projeto-sabespe/src/app/pages/capa-sp/capa-sp.component.html
@@ -4,8 +4,8 @@
         <img class="mask-group" src="assets/bandeira.png" />
     </div>
     <img class="ativo" src="assets/grafismo-capa.png" />
-    <img class="vector" src="assets/gif/ICONES_seta-dir.gif" />
-    <img class="img" src="assets/gif/ICONES_seta-esq.gif" />
+    <img class="vector" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/metas-sp']" />
+    <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/indicadores-contratuais']" />
     <div class="sao">SÃO</div>
     <div class="paulo">PAULO</div>
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
