--- a/projeto-sabespe/src/app/pages/capa-sa/capa-sa.component.html
+++ b/projeto-sabespe/src/app/pages/capa-sa/capa-sa.component.html
@@ -4,8 +4,8 @@
         <img class="mask-group" src="assets/predio.png" />
     </div>
     <img class="ativo" src="assets/grafismo-capa.png" />
-    <img class="vector" src="assets/gif/ICONES_seta-dir.gif" />
-    <img class="img" src="assets/gif/ICONES_seta-esq.gif" />
+    <img class="vector" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/metas-sa']" />
+    <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/metas-sp']" />
     <div class="sao">SANTO</div>
     <div class="paulo">ANDRÉ</div>
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
