--- a/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
+++ b/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.html
@@ -3,14 +3,14 @@
     <div class="indicadores">INDICADORES</div>
     <div class="metas-contratuais">METAS CONTRATUAIS</div>
     <img class="november" src="assets/celular.png" />
-    <img class="vector" src="assets/gif/ICONES_seta-esq.gif" />
-    <img class="img" src="assets/gif/ICONES_seta-dir.gif" />
+    <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/menu']" />
+    <img class="img" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/capa-sp']" />
     <img class="slice" src="img/slice-1.svg" />
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-    <img class="frame" src="assets/botao-sp.png" [routerLink]="['/capa-sp']" />
-    <img class="frame-2" src="assets/botao-sa.png" [routerLink]="['/capa-sa']" />
-    <img class="frame-3" src="assets/botao-m.png" [routerLink]="['/capa-m']" />
+    <img class="frame" src="assets/botao-sp.png" [routerLink]="['/metas-sp']" />
+    <img class="frame-2" src="assets/botao-sa.png" [routerLink]="['/metas-sa']" />
+    <img class="frame-3" src="assets/botao-m.png" [routerLink]="['/metas-maua']" />
 </div>
 
     
