--- a/projeto-sabespe/src/app/pages/metas-maua/metas-maua.component.html
+++ b/projeto-sabespe/src/app/pages/metas-maua/metas-maua.component.html
@@ -36,11 +36,10 @@
       [showXAxisLabel]="true">
     </ngx-charts-bar-vertical>
   </div>  
-  <img class="img" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/capa-maua']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" />
 </div>
 
 
