--- a/projeto-sabespe/src/app/pages/processo-nle/processo-nle.component.html
+++ b/projeto-sabespe/src/app/pages/processo-nle/processo-nle.component.html
@@ -1,7 +1,7 @@
 <div class="div">
   <div class="overlap-group">
-    <div class="metas-contratuais">TCFL</div>
-    <div class="s-o-paulo">Taxa de Cumprimento do Valor Faturado Líquido</div>
+    <div class="metas-contratuais">NLE</div>
+    <div class="s-o-paulo">Novas Ligações de Esgoto</div>
   </div>
   <img class="ativo" src="assets/grafismo-2.png" />
   <div class="line line-1" style="display: block;">
@@ -14,9 +14,7 @@
       [showGridLines]="false"
       [roundEdges]="false"
       [xAxisLabel]="'Janeiro'"
-      [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel"
-      [dataLabelFormatting]="formatDataLabel">
+      [showXAxisLabel]="true">
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-2" style="display: block;">
@@ -30,7 +28,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Fevereiro'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-3" style="display: block;">
@@ -44,7 +42,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Março'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-4" style="display: block;">
@@ -58,7 +56,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Abril'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-5" style="display: block;">
@@ -72,7 +70,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Maio'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-6" style="display: block;">
@@ -86,7 +84,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Junho'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-7" style="display: block;">
@@ -100,7 +98,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Julho'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-8" style="display: block;">
@@ -114,7 +112,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Agosto'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-9" style="display: block;">
@@ -128,7 +126,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Setembro'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-10" style="display: block;">
@@ -142,7 +140,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Outubro'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-11" style="display: block;">
@@ -156,7 +154,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Novembro'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <div class="line line-12" style="display: block;">
@@ -170,7 +168,7 @@
       [roundEdges]="false"
       [xAxisLabel]="'Dezembro'"
       [showXAxisLabel]="true"
-      [dataLabelFormatting]="formatDataLabel">
+      >
     </ngx-charts-bar-vertical>
   </div>  
   <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/capa-sp']" />
