--- a/projeto-sabespe/src/app/pages/perfil-polo-mooca/perfil-polo-mooca.component.html
+++ b/projeto-sabespe/src/app/pages/perfil-polo-mooca/perfil-polo-mooca.component.html
@@ -17,14 +17,14 @@
   <img class="absoluto ativo-6" src="assets/bolinha-azul.png" />
   <img class="absoluto ativo-7" src="assets/bolinha-azul.png" />
   <img class="absoluto ativo-8" src="assets/bolinha-azul.png" />
-  <div class="text-geral absoluto text-wrapper">{{ excelData[0]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-2">{{ excelData[1]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-3">{{ excelData[2]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-4">{{ excelData[7]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-5">{{ excelData[6]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-6">{{ excelData[5]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-8">{{ excelData[4]["Perfil Polo de manutenção Mooca"] }}</div>
-  <div class="text-geral absoluto text-wrapper-9">{{ excelData[3]["Perfil Polo de manutenção Mooca"] }}</div>
+  <div class="text-geral absoluto text-wrapper">{{ excelData[0]["População Atendida"] }}</div>
+  <div class="text-geral absoluto text-wrapper-2">{{ excelData[0]["Faturamento Médio Anual - Líquido"] }}</div>
+  <div class="text-geral absoluto text-wrapper-3">{{ excelData[0]["Total de Ligações"] }}</div>
+  <div class="text-geral absoluto text-wrapper-4">{{ excelData[0]["Economias Esgoto"] }}</div>
+  <div class="text-geral absoluto text-wrapper-5">{{ excelData[0]["Economias de Água"] }}</div>
+  <div class="text-geral absoluto text-wrapper-6">{{ excelData[0]["Total de Economias"] }}</div>
+  <div class="text-geral absoluto text-wrapper-8">{{ excelData[0]["Ligações Esgoto"] }}</div>
+  <div class="text-geral absoluto text-wrapper-9">{{ excelData[0]["Ligações Água"] }}</div>
   <div class="text-geral absoluto text-wrapper-10">Economias de Água</div>
   <div class="text-geral absoluto text-wrapper-11">Faturamento Médio Anual (líquido)</div>
   <div class="text-geral absoluto text-wrapper-12">Total de Ligações</div>
