--- a/projeto-sabespe/src/app/pages/indicadores-processo/indicadores-processo.component.html
+++ b/projeto-sabespe/src/app/pages/indicadores-processo/indicadores-processo.component.html
@@ -3,11 +3,10 @@
     <div class="indicadores">INDICADORES</div>
     <div class="metas-contratuais">PROCESSO</div>
     <img class="november" src="assets/celular.png" />
-    <img class="slice" src="img/slice-1.svg" />
     <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-    <img class="frame" src="assets/ver-todos.png" />
-    <img class="frame-2" src="assets/selecionar-indicador.png" />
+    <img class="frame" src="assets/ver-todos.png" [routerLink]="['/processo-igq']" />
+    <img class="frame-2" src="assets/selecionar-indicador.png" [routerLink]="['/tela-botoes']" />
 </div>
 
     
