--- a/projeto-sabespe/src/app/pages/metas-maua-3/metas-maua-3.component.html
+++ b/projeto-sabespe/src/app/pages/metas-maua-3/metas-maua-3.component.html
@@ -38,7 +38,7 @@
       [dataLabelFormatting]="formatDataLabelLitro">
     </ngx-charts-bar-vertical>
   </div>  
-  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/capa-maua']" />
+  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/metas-maua-2']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
