--- a/projeto-sabespe/src/app/pages/metas-sp/metas-sp.component.html
+++ b/projeto-sabespe/src/app/pages/metas-sp/metas-sp.component.html
@@ -98,7 +98,7 @@
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/capa-sa']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/metas-sp-2']" />
 </div>
 
 
