--- a/projeto-sabespe/src/app/pages/processo-touv/processo-touv.component.html
+++ b/projeto-sabespe/src/app/pages/processo-touv/processo-touv.component.html
@@ -172,11 +172,11 @@
       [dataLabelFormatting]="formatDataLabel">
     </ngx-charts-bar-vertical>
   </div>  
-  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/capa-sp']" />
+  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/processo-trr']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/capa-sa']" />
+  <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-tci']" />
 </div>
 
 
