--- a/projeto-sabespe/src/app/pages/metas-maua/metas-maua.component.css
+++ b/projeto-sabespe/src/app/pages/metas-maua/metas-maua.component.css
@@ -117,6 +117,14 @@
     height: 150px;
     top: 920px;
   }
+
+  .vector-2 {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    top: 920px;
+    left: 1750px;
+  }
   
   ::ng-deep .textDataLabel {
     transform: none !important; /* Remove a transformação diagonal */
