--- a/projeto-sabespe/src/app/pages/metas-sp-3/metas-sp-3.component.html
+++ b/projeto-sabespe/src/app/pages/metas-sp-3/metas-sp-3.component.html
@@ -94,7 +94,7 @@
       [dataLabelFormatting]="formatDataLabel">
     </ngx-charts-bar-vertical>
   </div>  
-  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/capa-sp']" />
+  <img class="img" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/metas-sp-2']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
