--- a/projeto-sabespe/src/app/pages/tela-botoes/tela-botoes.component.html
+++ b/projeto-sabespe/src/app/pages/tela-botoes/tela-botoes.component.html
@@ -1,36 +1,36 @@
 <div class="div">
-    <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/menu']" />
+    <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/indicadores-processo']" />
     <img class="img" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
     <img class="frame" src="assets/linha-colorida.png" />
     <img class="group-2" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
-    <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/mapa']" />
+    <img class="vector-2" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/processo-igq']" />
     <img class="ativo" src="assets/tela-botoes/Ativo-3.png" /> 
-    <img class="frame-80 frame-2" src="assets/tela-botoes/Frame-38.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-3" src="assets/tela-botoes/Frame-40.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-4" src="assets/tela-botoes/Frame-17.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-5" src="assets/tela-botoes/Frame-30.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-6" src="assets/tela-botoes/Frame-39.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-7" src="assets/tela-botoes/Frame-20.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-8" src="assets/tela-botoes/Frame-31.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-9" src="assets/tela-botoes/Frame-41.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-10" src="assets/tela-botoes/Frame-65.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-11" src="assets/tela-botoes/Frame-42.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-12" src="assets/tela-botoes/Frame-43.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-13" src="assets/tela-botoes/Frame-45.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-14" src="assets/tela-botoes/Frame-46.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-15" src="assets/tela-botoes/Frame-47.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-16" src="assets/tela-botoes/Frame-44.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-17" src="assets/tela-botoes/Frame-48.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-18" src="assets/tela-botoes/Frame-49.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-19" src="assets/tela-botoes/Frame-50.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-20" src="assets/tela-botoes/Frame-51.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-21" src="assets/tela-botoes/Frame-52.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-22" src="assets/tela-botoes/Frame-53.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-23" src="assets/tela-botoes/Frame-54.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-24" src="assets/tela-botoes/Frame-55.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-25" src="assets/tela-botoes/Frame-56.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-26" src="assets/tela-botoes/Frame-57.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-27" src="assets/tela-botoes/Frame-58.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-28" src="assets/tela-botoes/Frame-59.png" [routerLink]="['/menu']" />
-    <img class="frame-80 frame-29" src="assets/tela-botoes/Frame-60.png" [routerLink]="['/menu']" />
+    <img class="frame-80 frame-2" src="assets/tela-botoes/Frame-38.png" [routerLink]="['/processo-iorc']" />
+    <img class="frame-80 frame-3" src="assets/tela-botoes/Frame-40.png" [routerLink]="['/processo-igq']" />
+    <img class="frame-80 frame-4" src="assets/tela-botoes/Frame-17.png" [routerLink]="['/processo-iprp']" />
+    <img class="frame-80 frame-5" src="assets/tela-botoes/Frame-30.png" [routerLink]="['/processo-iact']" />
+    <img class="frame-80 frame-6" src="assets/tela-botoes/Frame-39.png" [routerLink]="['/processo-iord']" />
+    <img class="frame-80 frame-7" src="assets/tela-botoes/Frame-20.png" [routerLink]="['/processo-cmc']" />
+    <img class="frame-80 frame-8" src="assets/tela-botoes/Frame-31.png" [routerLink]="['/processo-irfa']" />
+    <img class="frame-80 frame-9" src="assets/tela-botoes/Frame-41.png" [routerLink]="['/processo-ase']" />
+    <img class="frame-80 frame-10" src="assets/tela-botoes/Frame-65.png" [routerLink]="['/processo-asa']" />
+    <img class="frame-80 frame-11" src="assets/tela-botoes/Frame-42.png" [routerLink]="['/processo-ianc']" />
+    <img class="frame-80 frame-12" src="assets/tela-botoes/Frame-43.png" [routerLink]="['/processo-ipdt']" />
+    <img class="frame-80 frame-13" src="assets/tela-botoes/Frame-45.png" [routerLink]="['/processo-idg']" />
+    <img class="frame-80 frame-14" src="assets/tela-botoes/Frame-46.png" [routerLink]="['/processo-isc']" />
+    <img class="frame-80 frame-15" src="assets/tela-botoes/Frame-47.png" [routerLink]="['/processo-iep']" />
+    <img class="frame-80 frame-16" src="assets/tela-botoes/Frame-44.png" [routerLink]="['/processo-iec']" />
+    <img class="frame-80 frame-17" src="assets/tela-botoes/Frame-48.png" [routerLink]="['/processo-ieam']" />
+    <img class="frame-80 frame-18" src="assets/tela-botoes/Frame-49.png" [routerLink]="['/processo-trr']" />
+    <img class="frame-80 frame-19" src="assets/tela-botoes/Frame-50.png" [routerLink]="['/processo-tci']" />
+    <img class="frame-80 frame-20" src="assets/tela-botoes/Frame-51.png" [routerLink]="['/processo-ivv']" />
+    <img class="frame-80 frame-21" src="assets/tela-botoes/Frame-52.png" [routerLink]="['/processo-touv']" />
+    <img class="frame-80 frame-22" src="assets/tela-botoes/Frame-53.png" [routerLink]="['/processo-nps']" />
+    <img class="frame-80 frame-23" src="assets/tela-botoes/Frame-54.png" [routerLink]="['/processo-tcd']" />
+    <img class="frame-80 frame-24" src="assets/tela-botoes/Frame-55.png" [routerLink]="['/processo-tca']" />
+    <img class="frame-80 frame-25" src="assets/tela-botoes/Frame-56.png" [routerLink]="['/processo-nle']" />
+    <img class="frame-80 frame-26" src="assets/tela-botoes/Frame-57.png" [routerLink]="['/processo-nla']" />
+    <img class="frame-80 frame-27" src="assets/tela-botoes/Frame-58.png" [routerLink]="['/processo-in']" />
+    <img class="frame-80 frame-28" src="assets/tela-botoes/Frame-59.png" [routerLink]="['/processo-tcdbo']" />
+    <img class="frame-80 frame-29" src="assets/tela-botoes/Frame-60.png" [routerLink]="['/processo-tcfl']" />
   </div>
