--- a/projeto-sabespe/src/app/pages/menu/menu.component.html
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.html
@@ -4,8 +4,8 @@
       <img class="image" src="assets/gif/Element_05.gif" />
       <img class="vector" src="assets/linha-inferior.png" />
       <img class="img" src="assets/linha-inferior-meio.png" />
-      <div class="frame"><div class="text-wrapper" [routerLink]="['/indicadores-processo']">Indicadores e processos</div></div>
-      <div class="div-wrapper"><div class="text-wrapper" [routerLink]="['/indicadores-contratuais']">Metas Contratuais</div></div>
+      <div class="frame" [routerLink]="['/indicadores-processo']"><div class="text-wrapper">Indicadores e processos</div></div>
+      <div class="div-wrapper"  [routerLink]="['/indicadores-contratuais']"><div class="text-wrapper">Metas Contratuais</div></div>
     </div>
     <img class="vector-2" src="assets/linha-superior-meio.png" />
     <div class="overlap">
