adicionando cursor pointer

--- a/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.css
+++ b/projeto-sabespe/src/app/pages/indicadores-contraturais/indicadores-contraturais.component.css
@@ -54,6 +54,7 @@
   height: 150px;
   top: 920px;
   left: 1600px;
+  cursor: pointer;
 }
 
 .img {
@@ -62,6 +63,7 @@
   height: 150px;
   top: 920px;
   left: 1750px;
+  cursor: pointer;
 }
 
 .group-2 {
@@ -70,6 +72,7 @@
   height: 150px;
   top: 920px;
   left: 116px;
+  cursor: pointer;
 }
 
 .group-3 {
@@ -77,6 +80,7 @@
   width: 150px;
   height: 150px;
   top: 920px;
+  cursor: pointer;
 }
 
 .frame {
@@ -85,6 +89,7 @@
   position: absolute;
   height: 59px;
   top: 468px;
+  cursor: pointer;
 }
 
 .frame-2 {
@@ -93,6 +98,7 @@
   position: absolute;
   height: 59px;
   top: 468px;
+  cursor: pointer;
 }
 
 .frame-3 {
@@ -101,4 +107,5 @@
   position: absolute;
   height: 59px;
   top: 468px;
+  cursor: pointer;
 }
