--- a/projeto-sabespe/src/app/pages/mapa/mapa.component.html
+++ b/projeto-sabespe/src/app/pages/mapa/mapa.component.html
@@ -12,7 +12,7 @@
     <div class="frame-2" [routerLink]="['/perfil-polo-mooca']"><div class="text-wrapper-2">Polo Mooca</div></div>
     <div class="frame-3" [routerLink]="['/perfil-polo-ipiranga']"><div class="text-wrapper-3">Polo Ipiranga</div></div>
   </div>
-  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/mapa']" />
+  <img class="vector" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/perfil-centro']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
   <img class="frame-4" src="assets/linha-colorida.png" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
