--- a/projeto-sabespe/src/app/pages/metas-maua-2/metas-maua-2.component.css
+++ b/projeto-sabespe/src/app/pages/metas-maua-2/metas-maua-2.component.css
@@ -92,6 +92,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 1600px;
   }
   
@@ -101,6 +102,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -116,6 +118,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
 
   .vector-2 {
@@ -124,6 +127,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
