--- a/projeto-sabespe/src/app/pages/metas-maua-3/metas-maua-3.component.css
+++ b/projeto-sabespe/src/app/pages/metas-maua-3/metas-maua-3.component.css
@@ -93,6 +93,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -101,6 +102,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -116,6 +118,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
