--- a/projeto-sabespe/src/app/pages/metas-sa-3/metas-sa-3.component.css
+++ b/projeto-sabespe/src/app/pages/metas-sa-3/metas-sa-3.component.css
@@ -106,6 +106,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 1600px;
   }
   
@@ -114,6 +115,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 116px;
   }
   
@@ -130,6 +132,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -138,6 +141,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
