--- a/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.css
+++ b/projeto-sabespe/src/app/pages/voce-sabia-vila/voce-sabia-vila.component.css
@@ -112,6 +112,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -120,6 +121,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -134,15 +136,8 @@
     position: absolute;
     width: 150px;
     height: 150px;
+    cursor: pointer;
     top: 920px;
-  }
-  
-  .vector-2 {
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    top: 920px;
-    left: 1750px;
   }
 
   .paragrafo-com-scroll {
