--- a/projeto-sabespe/src/app/pages/capa-sa/capa-sa.component.css
+++ b/projeto-sabespe/src/app/pages/capa-sa/capa-sa.component.css
@@ -53,6 +53,7 @@
   height: 150px;
   top: 920px;
   left: 1750px;
+  cursor: pointer;
 }
 
 .img {
@@ -61,6 +62,7 @@
   height: 150px;
   top: 920px;
   left: 1600px;
+  cursor: pointer;
 }
 
 .sao {
@@ -95,11 +97,13 @@
   height: 150px;
   top: 920px;
   left: 116px;
+  cursor: pointer;
 }
 
 .group-3 {
   position: absolute;
   width: 150px;
   height: 150px;
+  cursor: pointer;
   top: 920px;
 }
