--- a/projeto-sabespe/src/app/pages/capa-sp/capa-sp.component.css
+++ b/projeto-sabespe/src/app/pages/capa-sp/capa-sp.component.css
@@ -53,6 +53,7 @@
   height: 150px;
   top: 920px;
   left: 1750px;
+  cursor: pointer;
 }
 
 .img {
@@ -61,6 +62,7 @@
   height: 150px;
   top: 920px;
   left: 1600px;
+  cursor: pointer;
 }
 
 .sao {
@@ -95,6 +97,7 @@
   height: 150px;
   top: 920px;
   left: 116px;
+  cursor: pointer;
 }
 
 .group-3 {
@@ -102,4 +105,5 @@
   width: 150px;
   height: 150px;
   top: 920px;
+  cursor: pointer;
 }
