--- a/projeto-sabespe/src/app/pages/mapa/mapa.component.css
+++ b/projeto-sabespe/src/app/pages/mapa/mapa.component.css
@@ -80,6 +80,7 @@
     left: 0;
     background-color: rgba(255, 137, 1, 1);
     border-radius: 30px;
+    cursor: pointer;
   }
   
   .text-wrapper {
@@ -108,6 +109,7 @@
     left: 1139px;
     background-color: rgba(18, 208, 255, 1);
     border-radius: 30px;
+    cursor: pointer;
   }
   
   .text-wrapper-2 {
@@ -134,6 +136,7 @@
     left: 722px;
     background-color: rgba(255, 198, 1, 1);
     border-radius: 30px;
+    cursor: pointer;
   }
   
   .frame-2 {
@@ -149,6 +152,7 @@
     left: 399px;
     background-color: rgba(250, 177, 128, 1);
     border-radius: 30px;
+    cursor: pointer;
   }
   
   .frame-3 {
@@ -164,6 +168,7 @@
     left: 337px;
     background-color: rgba(18, 161, 1, 1);
     border-radius: 30px;
+    cursor: pointer;
   }
   
   .text-wrapper-3 {
@@ -185,6 +190,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -193,6 +199,7 @@
     position: absolute;
     left: 116px;
     top: 920px;
+    cursor: pointer;
   }
   
   .frame-4 {
@@ -208,6 +215,7 @@
     height: 150px;
     position: absolute;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -216,5 +224,6 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
