--- a/projeto-sabespe/src/app/pages/menu/menu.component.html
+++ b/projeto-sabespe/src/app/pages/menu/menu.component.html
@@ -16,7 +16,7 @@
   </div>
   <img class="vector-4" src="assets/gif/ICONES_seta-dir.gif" [routerLink]="['/perfil-centro']" />
   <img class="group-2" src="assets/gif/ICONES_X.gif" [routerLink]="['/inicio']" />
-  <img class="vector-5" src="assets/gif/ICONES_seta-esq.gif" />
+  <img class="vector-5" src="assets/gif/ICONES_seta-esq.gif" [routerLink]="['/super-centro']" />
   <img class="group-3" src="assets/gif/ICONES_casa.gif" [routerLink]="['/menu']" />
 </div>
 
