--- a/projeto-sabespe/src/app/pages/metas-maua/metas-maua.component.css
+++ b/projeto-sabespe/src/app/pages/metas-maua/metas-maua.component.css
@@ -93,6 +93,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -100,6 +101,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 116px;
   }
   
@@ -116,6 +118,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
 
   .vector-2 {
@@ -124,6 +127,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
