--- a/projeto-sabespe/src/app/pages/metas-sa-2/metas-sa-2.component.css
+++ b/projeto-sabespe/src/app/pages/metas-sa-2/metas-sa-2.component.css
@@ -107,6 +107,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -115,6 +116,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -130,6 +132,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -138,6 +141,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
