--- a/projeto-sabespe/src/app/pages/metas-sp/metas-sp.component.css
+++ b/projeto-sabespe/src/app/pages/metas-sp/metas-sp.component.css
@@ -121,6 +121,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -129,6 +130,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -144,6 +146,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -152,6 +155,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
