--- a/projeto-sabespe/src/app/pages/processo-asa/processo-asa.component.css
+++ b/projeto-sabespe/src/app/pages/processo-asa/processo-asa.component.css
@@ -109,6 +109,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -116,6 +117,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 116px;
   }
   
@@ -131,6 +133,7 @@
     position: absolute;
     width: 150px;
     height: 150px;
+    cursor: pointer;
     top: 920px;
   }
   
@@ -139,6 +142,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 1750px;
   }
   
