--- a/projeto-sabespe/src/app/pages/processo-cmc/processo-cmc.component.css
+++ b/projeto-sabespe/src/app/pages/processo-cmc/processo-cmc.component.css
@@ -77,6 +77,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -85,6 +86,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -100,6 +102,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -108,6 +111,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
