--- a/projeto-sabespe/src/app/pages/processo-ivv/processo-ivv.component.css
+++ b/projeto-sabespe/src/app/pages/processo-ivv/processo-ivv.component.css
@@ -109,6 +109,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -117,6 +118,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -132,6 +134,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -140,6 +143,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
