--- a/projeto-sabespe/src/app/pages/processo-nps/processo-nps.component.css
+++ b/projeto-sabespe/src/app/pages/processo-nps/processo-nps.component.css
@@ -81,6 +81,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -89,6 +90,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -104,6 +106,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -112,6 +115,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
   
   ::ng-deep .textDataLabel {
