--- a/projeto-sabespe/src/app/pages/processo-trr/processo-trr.component.css
+++ b/projeto-sabespe/src/app/pages/processo-trr/processo-trr.component.css
@@ -108,6 +108,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 1600px;
   }
   
@@ -116,6 +117,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 116px;
   }
   
@@ -132,6 +134,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -139,6 +142,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
     left: 1750px;
   }
   
