--- a/projeto-sabespe/src/app/pages/tela-botoes/tela-botoes.component.css
+++ b/projeto-sabespe/src/app/pages/tela-botoes/tela-botoes.component.css
@@ -11,6 +11,7 @@
   height: 150px;
   top: 920px;
   left: 1600px;
+  cursor: pointer;
 }
 
 .img {
@@ -19,6 +20,7 @@
   left: 116px;
   position: absolute;
   top: 920px;
+  cursor: pointer;
 }
 
 .frame {
@@ -34,6 +36,7 @@
   height: 150px;
   position: absolute;
   top: 920px;
+  cursor: pointer;
 }
 
 .vector-2 {
@@ -42,6 +45,7 @@
   height: 150px;
   top: 920px;
   left: 1750px;
+  cursor: pointer;
 }
 
 .ativo {
