--- a/projeto-sabespe/src/app/pages/voce-sabia-ibirapuera/voce-sabia-ibirapuera.component.css
+++ b/projeto-sabespe/src/app/pages/voce-sabia-ibirapuera/voce-sabia-ibirapuera.component.css
@@ -112,6 +112,7 @@
     height: 150px;
     top: 920px;
     left: 1600px;
+    cursor: pointer;
   }
   
   .group-2 {
@@ -120,6 +121,7 @@
     height: 150px;
     top: 920px;
     left: 116px;
+    cursor: pointer;
   }
   
   .frame {
@@ -135,6 +137,7 @@
     width: 150px;
     height: 150px;
     top: 920px;
+    cursor: pointer;
   }
   
   .vector-2 {
@@ -143,6 +146,7 @@
     height: 150px;
     top: 920px;
     left: 1750px;
+    cursor: pointer;
   }
 
   .paragrafo-com-scroll {
